--- a/src/index.html
+++ b/src/index.html
@@ -16,26 +16,23 @@
                 <div class="numbers">2,165 + 320 + 220 + 60 =</div>
             </div>
             <ul class="list value-list">
-                <li class="value-item">1</li>
-                <li class="value-item">2</li>
-                <li class="value-item">3</li>
-                <li class="value-item">4</li>
-                <li class="value-item">5</li>
-                <li class="value-item">6</li>
-                <li class="value-item">7</li>
-                <li class="value-item">8</li>
-                <li class="value-item">9</li>
-                <li class="value-item">10</li>
-                <li class="value-item">11</li>
-                <li class="value-item">12</li>
-                <li class="value-item">13</li>
-                <li class="value-item">14</li>
-                <li class="value-item">15</li>
-                <li class="value-item">16</li>
-                <li class="value-item">17</li>
-                <li class="value-item">18</li>
-                <li class="value-item">19</li>
-                <li class="value-item">20</li>
+                <button class="value-item delete"><span class="value-span">C</span> <br><hr><br> <span>AC</span></button>
+                <button class="value-item percent">%</button>
+                <button class="value-item multiplication">X</button>
+                <button class="value-item minus">-</button>
+                <button class="value-item seven">7</button>
+                <button class="value-item eight">8</button>
+                <button class="value-item nine">9</button>
+                <button class="value-item plus">+</button>
+                <button class="value-item four">4</button>
+                <button class="value-item fife">5</button>
+                <button class="value-item six">6</button>
+                <button class="value-item one">1</button>
+                <button class="value-item two">2</button>
+                <button class="value-item three">3</button>
+                <button class="value-item total">=</button>
+                <button class="value-item dot">.</button>
+                <button class="value-item zero">0</button>
             </ul>
         </div>
     </div>
