--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <div class="numbers">2,165 + 320 + 220 + 60 =</div>
             </div>
             <ul class="list value-list">
-                <button class="value-item delete"><span class="value-span">C</span> <br><hr><br> <span>AC</span></button>
-                <button class="value-item percent">%</button>
+                <button class="value-item delete">C <hr> AC</button>
+                <button class="value-item divide">/</button>
                 <button class="value-item multiplication">X</button>
                 <button class="value-item minus">-</button>
                 <button class="value-item seven">7</button>
